[project]
name = "aiagent-plurality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camel-oasis>=0.2.3",
    "neo4j>=5.22.0",
    "networkx>=3.3",
    "pyyaml>=6.0.1",
    "pandas==2.2.2",
    "plotly>=5.24.1",
    "streamlit>=1.40.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "marimo>=0.18.4",
    "matplotlib-fontja>=1.1.0",
    "torch>=2.2.0",
    "scikit-learn>=1.4.0",
    "umap-learn>=0.5.6",
    "python-louvain>=0.16",
]
